syntax = "proto3";

package order_executor;

option go_package = "github.com/ismaiel54/fault-tolerant-trading-pipeline/proto/order_executor";

// OrderExecutor service for executing trading orders
service OrderExecutor {
  rpc ExecuteOrder(OrderRequest) returns (OrderResponse);
}

message OrderRequest {
  string order_id = 1;
  string symbol = 2;
  string side = 3; // BUY or SELL
  double quantity = 4;
  double price = 5;
}

message OrderResponse {
  bool success = 1;
  string order_id = 2;
  string message = 3;
  int64 executed_at = 4;
}

